Se añade Login directamente con AD en red, se modifican los permisos de vista e impresion, y el Set Interval del Home se cambia a 2 minutos

--- a/WebResumen/Views/AutoClaveE/Print.cshtml
+++ b/WebResumen/Views/AutoClaveE/Print.cshtml
@@ -19,7 +19,7 @@
     @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosE")">Imprimir</a>*@
 
 
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
         <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosE")">Imprimir</a>
 
