--- a/WebResumen/Views/AutoClaveA/Print.cshtml
+++ b/WebResumen/Views/AutoClaveA/Print.cshtml
@@ -14,7 +14,7 @@
 
     @using Microsoft.AspNetCore.Authorization
     @inject IAuthorizationService AuthorizationService
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
     <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")">Imprimir</a>
     }
