--- a/WebResumen/Views/AutoClaveB/Print.cshtml
+++ b/WebResumen/Views/AutoClaveB/Print.cshtml
@@ -20,7 +20,7 @@
     @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")">Imprimir</a>*@
 
 
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
         <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosB")">Imprimir</a>
     }
