--- a/WebResumen/Views/AutoClaveG/Print.cshtml
+++ b/WebResumen/Views/AutoClaveG/Print.cshtml
@@ -17,7 +17,7 @@
     @inject IAuthorizationService AuthorizationService
     @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosG")">Imprimir</a>*@
 
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
         <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosG")">Imprimir</a>
 
