--- a/WebResumen/Views/AutoClaveH/Print.cshtml
+++ b/WebResumen/Views/AutoClaveH/Print.cshtml
@@ -18,7 +18,7 @@
     @*<a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosH")">Imprimir</a>*@
 
 
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
         <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosH")">Imprimir</a>
 
