--- a/WebResumen/Views/AutoClaveM/Print.cshtml
+++ b/WebResumen/Views/AutoClaveM/Print.cshtml
@@ -18,7 +18,7 @@
     @inject IAuthorizationService AuthorizationService
     @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">Imprimir</a>*@
 
-    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Users")).Succeeded)
     {
 
         <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">Imprimir</a>
