--- a/WebResumen/Views/AutoClaveM/Login.cshtml
+++ b/WebResumen/Views/AutoClaveM/Login.cshtml
@@ -22,6 +22,7 @@
 
 }
 
+<a class="float-right mr-5" asp-area="" asp-controller="AutoClaveM" asp-action="Index"><i class="fa fa-chevron-circle-left" style="font-size:48px;color:darkblue"></i></a>
 
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Login de Usuario</h5>
@@ -31,7 +32,7 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Usuario"></label>
-                    <input asp-for="Usuario" class="form-control" />
+                    <input asp-for="Usuario" class="form-control bg-light" value="@httpContextAccessor.HttpContext.Session.GetString("SessionUser")" readonly />
                     <span asp-validation-for="Usuario" class="text-danger"></span>
                 </div>
                 <div class="form-group">
