--- a/WebResumen/Views/Parametro/Login.cshtml
+++ b/WebResumen/Views/Parametro/Login.cshtml
@@ -22,6 +22,7 @@
 
 }
 
+<a class="float-right mr-5" asp-area="" asp-controller="Parametro" asp-action="Index"><i class="fa fa-chevron-circle-left" style="font-size:48px;color:darkblue"></i></a>
 
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Confirmación de Usuario</h5>
@@ -31,7 +32,7 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Usuario"></label>
-                    <input asp-for="Usuario" class="form-control" />
+                    <input asp-for="Usuario" class="form-control bg-light" value="@httpContextAccessor.HttpContext.Session.GetString("SessionUser")" readonly />
                     <span asp-validation-for="Usuario" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -48,11 +49,11 @@
                 <div class="form-group">
 
                     @*<input asp-for="Id" class="form-control" value="@ViewBag.datos.Id" type="hidden" />
-                    <input asp-for="ImpresoraSabiUno" class="form-control" value="@ViewBag.datos.ImpresoraSabiUno" type="hidden" />
-                    <input asp-for="ImpresoraSabiDos" class="form-control" value="@ViewBag.datos.ImpresoraSabiDos" type="hidden" />
-                    <input asp-for="RutaLog" class="form-control" value="@ViewBag.datos.RutaLog" type="hidden" />
-                    <input asp-for="Tiempo" class="form-control" value="@ViewBag.datos.Tiempo" type="hidden" />
-                    <input asp-for="Reinicio" class="form-control" value="@ViewBag.datos.Reinicio" type="hidden" />*@
+                        <input asp-for="ImpresoraSabiUno" class="form-control" value="@ViewBag.datos.ImpresoraSabiUno" type="hidden" />
+                        <input asp-for="ImpresoraSabiDos" class="form-control" value="@ViewBag.datos.ImpresoraSabiDos" type="hidden" />
+                        <input asp-for="RutaLog" class="form-control" value="@ViewBag.datos.RutaLog" type="hidden" />
+                        <input asp-for="Tiempo" class="form-control" value="@ViewBag.datos.Tiempo" type="hidden" />
+                        <input asp-for="Reinicio" class="form-control" value="@ViewBag.datos.Reinicio" type="hidden" />*@
 
                     <input asp-for="Id" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosP")" type="hidden" />
                     <input asp-for="ImpresoraSabiUno" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetString("SessionImpresoraSabiUno")" type="hidden" />
