--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -51,24 +51,41 @@
 
 }
 
+
+
+
+
 <div class="container justify-content-center mt-5">
-    <h5 class="justify-content-center">Login de Usuario</h5>
+    @*<h5 class="justify-content-center">Login de Usuario</h5>*@
+   
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm">
+           
+        </div>
+        <div class="col-sm shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="col text-center">
+                <img src="~/img/login.png" id="icon" alt="User Icon"  class="img-fluid animated fadeInDown" />
+               
+            </div>
             <form method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
                 <div class="form-group">
-                    <label asp-for="Usuario"></label>
-                    <input asp-for="Usuario" class="form-control" />
-                    <span asp-validation-for="Usuario" class="text-danger"></span>
+                    @*<label asp-for="Usuario"></label>*@
+                    <input asp-for="Usuario" class="form-control img-fluid animated fadeInLeft" placeholder="usuario" />
+                    <span asp-validation-for="Usuario" class="text-danger "></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Contraseña"></label>
-                    <input asp-for="Contraseña" class="form-control" />
+                    @*<label asp-for="Contraseña"></label>*@
+                    <input asp-for="Contraseña" class="form-control img-fluid animated fadeInRight" placeholder="contraseña" />
                     <span asp-validation-for="Contraseña" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <div class="col text-center">
+                    <button type="submit" class="btn btn-primary img-fluid animated fadeInUp">LOG IN</button>
+                </div>
             </form>
+        </div>
+        <div class="col-sm">
+          
         </div>
     </div>
 </div>
