Se añade DataProteccion ISS C:\Users\SysHojaResumen\AppData\Local\IIS_KeyFolder, Agua ciclos >=5 se consideran como 8 y20 y ciclos>0 se consideran como 9 y 10 en sabi 2 ----se acomodan los Index de los autoclaves en la tabla autoclave, hora inicio-fin-acciones-se agrega control por fecha en Agua y en el Index tambien

--- a/WebResumen/Views/AutoClaveL/Index.cshtml
+++ b/WebResumen/Views/AutoClaveL/Index.cshtml
@@ -44,14 +44,14 @@
         <thead class="thead-dark">
             <tr>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.IdAutoclave)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.IdAutoclave)
+        </th>*@
                 @*<th>
-                        @Html.DisplayNameFor(model => model.IdSeccion)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.IdSeccion)
+        </th>*@
                 @*<th>
-                        @Html.DisplayNameFor(model => model.Tinicio)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.Tinicio)
+        </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.NumeroCiclo)
                 </th>
@@ -59,191 +59,194 @@
                     @Html.DisplayNameFor(model => model.Programa)
                 </th>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.Modelo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Programador)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Operador)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.CodigoProducto)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Lote)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Notas)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.IdUsuario)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase1)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF1)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TfsubF2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TfsubF3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase7A)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF7a)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase8A)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF8a)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase7B)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF7b)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase8B)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF8b)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase10)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF10)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase11)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF11)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase12)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif12)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF12)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.Modelo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Programador)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Operador)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CodigoProducto)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Lote)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Notas)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IdUsuario)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TfsubF2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TfsubF3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase7A)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF7a)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase8A)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF8a)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase7B)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF7b)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase8B)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF8b)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF12)
+        </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.HoraInicio)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HoraFin)
                 </th>
+                <th>
+                    Acciones
+                </th>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.EsterilizacionN)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tminima)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tmaxima)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotal)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FtzMin)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FtzMax)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DifMaxMin)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.AperturaPuerta)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TiempoCiclo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ErrorCiclo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FechaRegistro)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.EsterilizacionN)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tminima)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tmaxima)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FtzMin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FtzMax)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DifMaxMin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AperturaPuerta)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TiempoCiclo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ErrorCiclo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaRegistro)
+        </th>*@
                 <th></th>
             </tr>
         </thead>
