--- a/WebResumen/Views/Inicio/Index.cshtml
+++ b/WebResumen/Views/Inicio/Index.cshtml
@@ -30,7 +30,7 @@
   
     <div class="row mb-2">
         <div class="col-md-6">
-            <h4 class="text-center font-weight-bold">SABI I</h4>
+            <h4 class="text-center font-weight-bold">SABI 01</h4>
             <table class="table table-sm  ">
                 <thead class="thead-dark">
                     <tr>
@@ -158,7 +158,7 @@
 
         
         <div class="col-md-6">
-            <h4 class="text-center font-weight-bold">SABI II</h4>
+            <h4 class="text-center font-weight-bold">SABI 02</h4>
             <table class="table table-sm ">
                 <thead class="thead-dark">
                     <tr>
