--- a/WebResumen/Views/AutoClaveD/Index.cshtml
+++ b/WebResumen/Views/AutoClaveD/Index.cshtml
@@ -47,14 +47,14 @@
         <thead class="thead-dark">
             <tr>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.IdAutoclave)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.IdAutoclave)
+        </th>*@
                 @*<th>
-                        @Html.DisplayNameFor(model => model.IdSeccion)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.IdSeccion)
+        </th>*@
                 @*<th>
-                        @Html.DisplayNameFor(model => model.Tinicio)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.Tinicio)
+        </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.NumeroCiclo)
                 </th>
@@ -62,194 +62,197 @@
                     @Html.DisplayNameFor(model => model.Programa)
                 </th>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.Modelo)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.Modelo)
+        </th>*@
                 @*<th>
-                        @Html.DisplayNameFor(model => model.Programador)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Operador)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.CodigoProducto)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Lote)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Notas)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.IdUsuario)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase1)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF1)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF2)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF3)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF4)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TfsubF5)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TfsubF6)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase7)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF7)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif7)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF7)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase8)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF8)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif8)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF8)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff8)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tif9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TisubF9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff9)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase10)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF10)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase11)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF11)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase12)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotalF12)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Fase13)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tff13)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TfsubF13)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.Programador)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Operador)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CodigoProducto)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Lote)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Notas)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IdUsuario)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF1)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF2)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF3)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF4)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TfsubF5)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TfsubF6)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF7)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff8)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tif9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TisubF9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff9)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF10)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF11)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotalF12)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Fase13)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tff13)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TfsubF13)
+        </th>*@
                 <th>
                     @Html.DisplayNameFor(model => model.HoraInicio)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.HoraFin)
                 </th>
+                <th>
+                    Acciones
+                </th>
                 @*<th>
-                        @Html.DisplayNameFor(model => model.EsterilizacionN)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tminima)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Tmaxima)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DuracionTotal)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FtzMin)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FtzMax)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.DifMaxMin)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.AperturaPuerta)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.TiempoCiclo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.ErrorCiclo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FechaRegistro)
-                    </th>*@
+            @Html.DisplayNameFor(model => model.EsterilizacionN)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tminima)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tmaxima)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DuracionTotal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FtzMin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FtzMax)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DifMaxMin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AperturaPuerta)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TiempoCiclo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ErrorCiclo)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FechaRegistro)
+        </th>*@
                 <th></th>
             </tr>
         </thead>
