--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -32,124 +32,148 @@
 
 @*<tbody>
     <tr>
-        <td>Minimum Date:</td>
-        <td><input name="min" id="min" type="text"></td>
+        <td>Fecha Inicio: </td>
+        <td><input name="min" id="min" type="date"></td>
     </tr>
     <tr>
-        <td>Maximum Date:</td>
-        <td><input name="max" id="max" type="text"></td>
+
+        <td><input name="max" id="max" type="date"></td>
+    </tr>
+</tbody>
+<tbody>
+    <tr>
+        <td>Fecha Fin: </td>
+        <td><input name="fi" id="fi" type="date"></td>
+    </tr>
+    <tr>
+
+        <td><input name="fa" id="fa" type="date"></td>
     </tr>
 </tbody>*@
 
-<body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
+
+
+    <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
 
 
 
-    <table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
-        <thead>
-            <tr>
-                <th>Target</th>
-                <th>Buscar</th>
-                <th>Treat as regex</th>
-                <th>Use smart search</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr id="filter_global">
-                <td>Busqueda Global</td>
-                <td align="center"><input type="text" class="global_filter" id="global_filter"></td>
-                <td align="center"><input type="checkbox" class="global_filter" id="global_regex"></td>
-                <td align="center"><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
-            </tr>
-            @*<tr id="filter_col1" data-column="0">
-                    <td>Column - Id</td>
-                    <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
-                </tr>*@
-            <tr id="filter_col2" data-column="1">
-                <td>IdAutoclave </td>
-                <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col1_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
-            </tr>
-            @*<tr id="filter_col3" data-column="2">
-                    <td>Carro</td>
-                    <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
-                </tr>*@
-            <tr id="filter_col4" data-column="3">
-                <td>N Progresivo</td>
-                <td align="center"><input type="text" class="column_filter" id="col3_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col3_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
-            </tr>
-            <tr id="filter_col5" data-column="4">
-                <td>Programa</td>
-                <td align="center"><input type="text" class="column_filter" id="col4_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col4_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
-            </tr>
-            @*<tr id="filter_col6" data-column="5">
-                    <td>Cod.Producto</td>
-                    <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
-                </tr>*@
-            <tr id="filter_col8" data-column="7">
-                <td>Hora Inicio</td>
-                <td align="center">
-                    <input type="text" class="column_filter" id="col7_filter">
-
-                    @*<div class="input-group input-daterange">
-                        <input type="date" class="form-control column_filter" id="col7_filter">
-                        <div class="input-group-addon">to</div>
-                        <input type="date" class="form-control column_filter" id="col7_filter">
-                    </div>*@
-
-
-                </td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
-            </tr>
-            <tr id="filter_col9" data-column="8">
-                <td>Hora Fin</td>
-                <td align="center"><input type="text" class="column_filter" id="col8_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
-            </tr>
-            @*<tr id="filter_col43" data-column="42">
-                    <td>registro</td>
-                    <td align="center"><input type="date" class="column_filter" id="col42_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col42_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col42_smart" checked="checked"></td>
-                </tr>*@
-        </tbody>
-    </table>
-
-    <table id="example" datatable class=" table table-striped table-bordered table-sm"
-           dt-options="dtOptions"
-           dt-columns="dtColumns"
-           dt-instance="dtInstance">
-        <thead class="thead-dark">
-        </thead>
-        @*<tfoot>
+        <table cellpadding="1" cellspacing="0" border="0" style="width: 50%; margin: 0 auto 2em auto;">
+            <thead class="thead-dark">
                 <tr>
-                    <th>#</th>
-                    <th>idAutoclave</th>
-                    <th>N.Carro</th>
-                    <th>N.Progresivo</th>
+                    <th>Target</th>
+                    <th>Buscar</th>
+                    <th>Treat as regex</th>
+                    <th>Use smart search</th>
                 </tr>
-            </tfoot>*@
+            </thead>
+            <tbody >
+                <tr id="filter_global">
+                    <td>Busqueda Global</td>
+                    <td align="left"><input type="text" class="global_filter" id="global_filter"></td>
+                    <td align="center"><input type="checkbox" class="global_filter" id="global_regex"></td>
+                    <td align="center"><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
+                </tr>
+                @*<tr id="filter_col1" data-column="0">
+            <td>Column - Id</td>
+            <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
+        </tr>*@
+                <tr id="filter_col2" data-column="1">
+                    <td>IdAutoclave </td>
+                    <td align="left"><input type="text" class="column_filter" id="col1_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col1_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
+                </tr>
+                @*<tr id="filter_col3" data-column="2">
+            <td>Carro</td>
+            <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
+        </tr>*@
+                <tr id="filter_col4" data-column="3">
+                    <td>N Progresivo</td>
+                    <td align="left"><input type="text" class="column_filter" id="col3_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col3_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
+                </tr>
+                <tr id="filter_col5" data-column="4">
+                    <td>Programa</td>
+                    <td align="left"><input type="text" class="column_filter" id="col4_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col4_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
+                </tr>
+                @*-------------<tr id="filter_col6" data-column="5">
+            <td>Cod.Producto</td>
+            <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
+        </tr>--------------*@
+                @*<tr id="filter_col8" data-column="7">
+                    <td>Hora Inicio</td>
+                    <td align="center">
+                        <input type="text" class="column_filter" id="col7_filter">*@
 
-    </table>
+                        @*-------------------<div class="input-group input-daterange">
+                    <input type="date" class="form-control column_filter" id="col7_filter">
+                    <div class="input-group-addon">to</div>
+                    <input type="date" class="form-control column_filter" id="col7_filter">
+                </div>-----------------------*@
+
+
+                    @*</td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
+                </tr>
+                <tr id="filter_col9" data-column="8">
+                    <td>Hora Fin</td>
+                    <td align="center"><input type="text" class="column_filter" id="col8_filter"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
+                    <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
+                </tr>*@
+                @*---------------------<tr id="filter_col43" data-column="42">
+            <td>registro</td>
+            <td align="center"><input type="date" class="column_filter" id="col42_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col42_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col42_smart" checked="checked"></td>
+        </tr>-------------------*@
+
+                <tr>
+                    <td>Intervalo Fecha Inicio: </td>
+                    <td  align="left"><input name="min" id="min" type="date"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="date"><button onclick="javascript:max.value=''">X</button></td>
+                   
+                </tr>
+                <tr>
+                    <td>Intervalo Fecha Fin: </td>
+                    <td align="left"><input name="fi" id="fi" type="date"><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="date"><button onclick="javascript:fa.value=''">X</button></td>
+                  
+                </tr>
+
+            </tbody>
+        </table>
+
+        <table id="example" datatable class=" table table-striped table-bordered table-sm"
+               dt-options="dtOptions"
+               dt-columns="dtColumns"
+               dt-instance="dtInstance">
+            <thead class="thead-dark">
+            </thead>
+            @*<tfoot>
+                    <tr>
+                        <th>#</th>
+                        <th>idAutoclave</th>
+                        <th>N.Carro</th>
+                        <th>N.Progresivo</th>
+                    </tr>
+                </tfoot>*@
+
+        </table>
 
 
 
 
 
-</body>
+    </body>
 
 
 
