--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -65,8 +65,8 @@
 
 
                             @*<li class="nav-item">
-             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </li>*@
+                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                                </li>*@
                             else
                             {
 
@@ -109,7 +109,7 @@
                     </ul>
                 </div>
             </div>
-            
+
             <div class="panel panel-default">
                 <div style="color:white" class="panel-heading">ghfdhgfdgh</div>
                 <div class="panel-body">
@@ -147,8 +147,24 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
-            &copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>
+            <div class="row">
+                <div class="col-sm">
+
+                </div>
+
+                <div class="col-sm">
+                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a></p>
+
+                </div>
+
+                <div class="col-sm">
+                    <p> Hoja Resumen <a asp-area="" asp-controller="Home" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
+                </div>
+
+            </div>
+
         </div>
+        <!-- Copyright -->
 
     </footer>
 
