--- a/WebResumen/Views/Shared/_LayoutLogin.cshtml
+++ b/WebResumen/Views/Shared/_LayoutLogin.cshtml
@@ -40,7 +40,22 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
-            &copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>
+            <div class="row">
+                <div class="col-sm">
+
+                </div>
+
+                <div class="col-sm">
+                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a></p>
+                   
+                </div>
+
+                <div class="col-sm">
+                    <p> Hoja Resumen <a asp-area="" asp-controller="Home" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
+                </div>
+
+            </div>
+           
         </div>
         <!-- Copyright -->
 
