--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -8,7 +8,7 @@
 <body ng-app="datatablesVaporApp" ng-controller="vaporCtrl as tagapp">
 
 
-    <table cellpadding="3" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
+    <table cellpadding="1" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
         <thead>
             <tr>
                 <th>Target</th>
@@ -25,11 +25,11 @@
                 <td align="center"><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col1" data-column="0">
-                    <td>Column - Id</td>
-                    <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
-                </tr>*@
+            <td>Column - Id</td>
+            <td align="center"><input type="text" class="column_filter" id="col0_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col0_smart" checked="checked"></td>
+        </tr>*@
             <tr id="filter_col2" data-column="1">
                 <td>IdAutoclave </td>
                 <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
@@ -37,11 +37,11 @@
                 <td align="center"><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col3" data-column="2">
-                    <td>Carro</td>
-                    <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
-                </tr>*@
+            <td>Carro</td>
+            <td align="center"><input type="text" class="column_filter" id="col2_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col2_smart" checked="checked"></td>
+        </tr>*@
             <tr id="filter_col4" data-column="3">
                 <td>N Progresivo</td>
                 <td align="center"><input type="text" class="column_filter" id="col3_filter"></td>
@@ -55,22 +55,32 @@
                 <td align="center"><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
             </tr>
             @*<tr id="filter_col6" data-column="5">
-                    <td>Cod.Producto</td>
-                    <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
-                    <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
-                </tr>*@
-            <tr id="filter_col8" data-column="7">
-                <td>Hora Inicio</td>
-                <td align="center"><input type="text" class="column_filter" id="col7_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
+            <td>Cod.Producto</td>
+            <td align="center"><input type="text" class="column_filter" id="col5_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col5_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col5_smart" checked="checked"></td>
+        </tr>*@
+            @*<tr id="filter_col8" data-column="7">
+            <td>Hora Inicio</td>
+            <td align="center"><input type="text" class="column_filter" id="col7_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col7_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col7_smart" checked="checked"></td>
+        </tr>
+        <tr id="filter_col9" data-column="8">
+            <td>Hora Fin</td>
+            <td align="center"><input type="datetime" class="column_filter" id="col8_filter"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
+            <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
+        </tr>*@
+            <tr>
+                <td>Intervalo Fecha Inicio: </td>
+                <td align="left"><input name="min" id="min" type="date"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="date"><button onclick="javascript:max.value=''">X</button></td>
+
             </tr>
-            <tr id="filter_col9" data-column="8">
-                <td>Hora Fin</td>
-                <td align="center"><input type="datetime" class="column_filter" id="col8_filter"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col8_regex"></td>
-                <td align="center"><input type="checkbox" class="column_filter" id="col8_smart" checked="checked"></td>
+            <tr>
+                <td>Intervalo Fecha Fin: </td>
+                <td align="left"><input name="fi" id="fi" type="date"><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="date"><button onclick="javascript:fa.value=''">X</button></td>
+
             </tr>
         </tbody>
     </table>
