--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -57,7 +57,7 @@
 
 
 
-        <table cellpadding="1" cellspacing="0" border="0" style="width: 50%; margin: 0 auto 2em auto;">
+        <table cellpadding="1" cellspacing="0" border="0" style="width: 67%; margin: 0 auto 2em auto;">
             <thead class="thead-dark">
                 <tr>
                     <th>Target</th>
@@ -69,7 +69,7 @@
             <tbody >
                 <tr id="filter_global">
                     <td>Busqueda Global</td>
-                    <td align="left"><input type="text" class="global_filter" id="global_filter"></td>
+                    <td align="center"><input type="text" class="global_filter" id="global_filter"></td>
                     <td align="center"><input type="checkbox" class="global_filter" id="global_regex"></td>
                     <td align="center"><input type="checkbox" class="global_filter" id="global_smart" checked="checked"></td>
                 </tr>
@@ -81,7 +81,7 @@
         </tr>*@
                 <tr id="filter_col2" data-column="1">
                     <td>IdAutoclave </td>
-                    <td align="left"><input type="text" class="column_filter" id="col1_filter"></td>
+                    <td align="center"><input type="text" class="column_filter" id="col1_filter"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col1_regex"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col1_smart" checked="checked"></td>
                 </tr>
@@ -93,13 +93,13 @@
         </tr>*@
                 <tr id="filter_col4" data-column="3">
                     <td>N Progresivo</td>
-                    <td align="left"><input type="text" class="column_filter" id="col3_filter"></td>
+                    <td align="center"><input type="text" class="column_filter" id="col3_filter"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col3_regex"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col3_smart" checked="checked"></td>
                 </tr>
                 <tr id="filter_col5" data-column="4">
                     <td>Programa</td>
-                    <td align="left"><input type="text" class="column_filter" id="col4_filter"></td>
+                    <td align="center"><input type="text" class="column_filter" id="col4_filter"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col4_regex"></td>
                     <td align="center"><input type="checkbox" class="column_filter" id="col4_smart" checked="checked"></td>
                 </tr>
