Se añade libreri moment y calendario fechahora , se hacen cambios en los layouts y en index agua y vapor

--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -140,12 +140,12 @@
 
                 <tr>
                     <td>Intervalo Fecha Inicio: </td>
-                    <td  align="left"><input name="min" id="min" type="date"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="date"><button onclick="javascript:max.value=''">X</button></td>
+                    <td  align="left"><input name="min" id="min" type="datetime-local" value=""><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="datetime-local" value=""><button onclick="javascript:max.value=''">X</button></td>
                    
                 </tr>
                 <tr>
                     <td>Intervalo Fecha Fin: </td>
-                    <td align="left"><input name="fi" id="fi" type="date"><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="date"><button onclick="javascript:fa.value=''">X</button></td>
+                    <td align="left"><input name="fi" id="fi" type="datetime-local"value=""><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="datetime-local" value=""><button onclick="javascript:fa.value=''">X</button></td>
                   
                 </tr>
 
