--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -173,12 +173,12 @@
                 </div>
 
                 <div class="col-sm">
-                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a></p>
+                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Homexx" asp-action="Privacy">Baxter</a></p>
 
                 </div>
 
                 <div class="col-sm">
-                    <p> Hoja Resumen <a asp-area="" asp-controller="Home" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
+                    <p> Hoja Resumen <a asp-area="" asp-controller="Homexx" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
                 </div>
 
             </div>
@@ -193,8 +193,9 @@
     <!--</footer>-->
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/libraries/jquery.dataTables.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="~/js/TimeOut/TimeOut.js"></script>
 
     <!-- Bootstrap core JavaScript -->
@@ -234,6 +235,8 @@
     <script src="~/lib/libraries/DataTable/SearchPanel/dataTables.select.min.js"></script>
     <script src="~/lib/libraries/DataTable/SearchPanel/highcharts.js"></script>
     <script src="https://cdn.datatables.net/scroller/2.0.3/js/dataTables.scroller.min.js"></script>
+    <script src="~/lib/moment/moment.min.js"></script>
+
 
     <!-- Bootstrap Date-Picker Plugin -->
     <script src="~/lib/libraries/DatePicker/bootstrap-datepicker.min.js"></script>
