--- a/WebResumen/Views/Shared/_LayoutLogin.cshtml
+++ b/WebResumen/Views/Shared/_LayoutLogin.cshtml
@@ -46,12 +46,12 @@
                 </div>
 
                 <div class="col-sm">
-                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a></p>
+                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Homexx" asp-action="Privacy">Baxter</a></p>
                    
                 </div>
 
                 <div class="col-sm">
-                    <p> Hoja Resumen <a asp-area="" asp-controller="Home" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
+                    <p> Hoja Resumen <a asp-area="" asp-controller="Homexx" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
                 </div>
 
             </div>
