--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -74,12 +74,12 @@
         </tr>*@
             <tr>
                 <td>Intervalo Fecha Inicio: </td>
-                <td align="left"><input name="min" id="min" type="date"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="date"><button onclick="javascript:max.value=''">X</button></td>
+                <td align="left"><input name="min" id="min" type="datetime-local"><button onclick="javascript:min.value=''">X</button>  <input name="max" id="max" type="datetime-local"><button onclick="javascript:max.value=''">X</button></td>
 
             </tr>
             <tr>
                 <td>Intervalo Fecha Fin: </td>
-                <td align="left"><input name="fi" id="fi" type="date"><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="date"><button onclick="javascript:fa.value=''">X</button></td>
+                <td align="left"><input name="fi" id="fi" type="datetime-local"><button onclick="javascript:fi.value=''">X</button>  <input name="fa" id="fa" type="datetime-local"><button onclick="javascript:fa.value=''">X</button></td>
 
             </tr>
         </tbody>
