--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -153,12 +153,12 @@
                 </div>
 
                 <div class="col-sm">
-                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a></p>
+                    <p>&copy; 2021 Copyright - <a asp-area="" asp-controller="Homexx" asp-action="Privacy">Baxter</a></p>
 
                 </div>
 
                 <div class="col-sm">
-                    <p> Hoja Resumen <a asp-area="" asp-controller="Home" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
+                    <p> Hoja Resumen <a asp-area="" asp-controller="Homexx" asp-action="Privacy">v1.0 <i class="fa fa-rocket"></i></a></p>
                 </div>
 
             </div>
@@ -172,9 +172,10 @@
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/libraries/jquery.dataTables.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+   
+
     <script src="~/js/TimeOut/TimeOut.js"></script>
 
     <!-- Bootstrap core JavaScript -->
